--- a/app/views/paginations/size_adjustment.html.erb
+++ b/app/views/paginations/size_adjustment.html.erb
@@ -1,2 +1,7 @@
-<h1>Paginations#size_adjustment</h1>
-<p>Find me in app/views/paginations/size_adjustment.html.erb</p>
+<ul class="pagination">
+  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+  <li class="page-item"><a class="page-link" href="#">1</a></li>
+  <li class="page-item"><a class="page-link" href="#">2</a></li>
+  <li class="page-item"><a class="page-link" href="#">3</a></li>
+  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+</ul>
