--- a/app/views/collapses/collapse.html.erb
+++ b/app/views/collapses/collapse.html.erb
@@ -1,2 +1,16 @@
-<h1>Collapses#collapse</h1>
-<p>Find me in app/views/collapses/collapse.html.erb</p>
+<div class="container">
+  <p>
+    <button class="btn border" data-bs-toggle="collapse" data-bs-target="#collapseFirst">
+      Page Menu
+    </button>
+  </p>
+  <div class="collapse" id="collapseFirst">
+    <div class="card w-25 mb-5">
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><a href="#">Edit</a></li>
+        <li class="list-group-item"><a href="#">Destroy</a></li>
+        <li class="list-group-item"><a href="#">Main Menu</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
